--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.2",
     "react-discussion-board": "^1.0.5",
